--- a/WorkingWithStrings.ipynb
+++ b/WorkingWithStrings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WorkingWithStrings.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOwuSTU9TXzbOebfjNWaKGW",
+      "authorship_tag": "ABX9TyO0rf2HeD3IEsRiF24/0RfX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,13 +105,85 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8rVuwjhUNJxN"
+        "id": "W38QMXPuVVPB",
+        "outputId": "2331e29e-e9c6-4744-bf08-1808ca1ae526",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "print(\"The length of the previous message is \", len(message))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The length of the previous message is  48\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "erlZK0u0QdwX"
+      },
+      "source": [
+        "print??"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xd3Om1eYRJLG",
+        "outputId": "8ca53d48-0661-43ad-9dba-8a92052c7f2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(\"Print\",\"method\",\"can\",\"take\",\"multiple\",\"inputs\",\"and\",\"separates\",\"them\",\"by\",\"default\",\"by\",\"using\",\"a\",\"whitespace\")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Print method can take multiple inputs and separates them by default by using a whitespace\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p1_B-FtJR7Rr",
+        "outputId": "b9684c55-0f44-4f19-f2be-d492d93aee88",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(\"Print\",\"method\",\"can\",\"take\",\"multiple\",\"inputs\",\"which\",\"can\",\"be\",\"separated\",\"by\",\"other\",\"things\", sep='-')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Print-method-can-take-multiple-inputs-which-can-be-separated-by-other-things\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
