--- a/WorkingWithStrings.ipynb
+++ b/WorkingWithStrings.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "WorkingWithStrings.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0rf2HeD3IEsRiF24/0RfX",
+      "authorship_tag": "ABX9TyMlThAh/QpKn3V+QPZERz1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,6 +183,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XmDxiv-OVvSD"
+      },
+      "source": [
+        "this is an added line!"
       ]
     }
   ]
